@@ -95,7 +95,7 @@ public slots:
 
 	virtual void helpFAQ();
 	virtual void helpCLOptions();
-	virtual void helpTips();
+	virtual void helpCheckUpdates();
 	virtual void helpDonate();
 	virtual void helpAbout();
 	virtual void helpAboutQt();
@@ -430,7 +430,7 @@ protected:
 	// Menu Help
 	MyAction * showFAQAct;
 	MyAction * showCLOptionsAct; // Command line options
-	MyAction * showTipsAct;
+	MyAction * showCheckUpdatesAct;
 	MyAction * donateAct;
 	MyAction * aboutQtAct;
 	MyAction * aboutThisAct;
