@@ -1,5 +1,8 @@
 [b]Version 0.6.11[/b]:
 
+(2012-01-28)
+ * Add Help -> Check for updates (replaces Help -> Tips)
+
 (2012-01-27)
  * Simplify the about dialog.
 
